# ActivityFramework

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cmake.yml
ActivityFramework/: CMakeLists.txt
ActivityFramework/Src/: ITA_ActivityCreator.h  ITA_Connection.h  ITA_PipelineCreator.h  TA_ActivityFramework_global.h
ActivityFramework/Src/Components/: TA_Activity.h  TA_ActivityComponents.h  TA_ActivityComponments.h  TA_ActivityProxy.h  TA_ActivityQueue.h  TA_AffinityThreadComponment.h  TA_AsyncActivityProxy.h  TA_AutoChainPipeline.cpp  TA_AutoChainPipeline.h  TA_BasicActivity.cpp  TA_BasicActivity.h  TA_BasicPipeline.cpp  TA_BasicPipeline.h  TA_Buffer.cpp  TA_Buffer.h  TA_CommonTools.cpp  TA_CommonTools.h  TA_ConcurrentPipeline.cpp  TA_ConcurrentPipeline.h  TA_Connection.h  TA_ConnectionUtils.cpp  TA_ConnectionUtils.h  TA_Coroutine.h  TA_EndianConversion.h  TA_LinkedActivity.h  TA_ManualChainPipeline.cpp  TA_ManualChainPipeline.h  TA_ManualKeyActivityChainPipeline.cpp  TA_ManualKeyActivityChainPipeline.h  TA_ManualStepsChainPipeline.cpp  TA_ManualStepsChainPipeline.h  TA_MarcoDefine.h  TA_MetaActivity.h  TA_MetaObject.cpp  TA_MetaObject.h  TA_MetaReflex.h  TA_MetaStringView.h  TA_MethodActivity.h  TA_PipelineCreator.cpp  TA_PipelineCreator.h  (+10 more)
Benchmark/: CMakeLists.txt  main.cpp
TA_ActivityPipeline/: CMakeLists.txt  ITA_ActivityCreator.h  ITA_Connection.h  ITA_PipelineCreator.cpp  ITA_PipelineCreator.h  TA_ActivityPipeline_global.h
TA_ActivityPipeline/Components/: TA_ActivityQueue.h  TA_AutoChainPipeline.cpp  TA_AutoChainPipeline.h  TA_BasicActivity.h  TA_BasicPipeline.cpp  TA_BasicPipeline.h  TA_CommonTools.h  TA_Connection.h  TA_ConnectionUtils.cpp  TA_ConnectionUtils.h  TA_LinkedActivity.h  TA_ManualChainPipeline.cpp  TA_ManualChainPipeline.h  TA_ManualKeyActivityChainPipeline.cpp  TA_ManualKeyActivityChainPipeline.h  TA_ManualStepsChainPipeline.cpp  TA_ManualStepsChainPipeline.h  TA_MetaObject.cpp  TA_MetaObject.h  TA_MetaReflex.h  TA_MetaStringView.h  TA_ParallelPipeline.cpp  TA_ParallelPipeline.h  TA_PipelineCreator.cpp  TA_PipelineCreator.h  TA_PipelineHolder.h  TA_ReceiverObject.h  TA_SingleActivity.h  TA_TypeFilter.h  TA_TypeList.h  TA_Variant.cpp  TA_Variant.h
TA_ActivityPipeline/Src/: ITA_ActivityCreator.h  ITA_Connection.h  ITA_PipelineCreator.cpp  ITA_PipelineCreator.h
TA_ActivityPipeline/Src/Components/: TA_ActivityQueue.h  TA_AutoChainPipeline.cpp  TA_AutoChainPipeline.h  TA_BasicActivity.cpp  TA_BasicActivity.h  TA_BasicPipeline.cpp  TA_BasicPipeline.h  TA_CommonTools.h  TA_ConcurrentPipeline.h  TA_Connection.h  TA_ConnectionUtils.cpp  TA_ConnectionUtils.h  TA_LinkedActivity.h  TA_ManualChainPipeline.cpp  TA_ManualChainPipeline.h  TA_ManualKeyActivityChainPipeline.cpp  TA_ManualKeyActivityChainPipeline.h  TA_ManualStepsChainPipeline.cpp  TA_ManualStepsChainPipeline.h  TA_MarcoDefine.h  TA_MetaObject.cpp  TA_MetaObject.h  TA_MetaReflex.h  TA_ParallelPipeline.cpp  TA_ParallelPipeline.h  TA_PipelineCreator.cpp  TA_PipelineCreator.h  TA_PipelineHolder.h  TA_ReceiverObject.h  TA_SingleActivity.h  TA_ThreadPool.h  TA_TypeFilter.h  TA_Variant.cpp  TA_Variant.h
Test/: CMakeLists.txt
Test/ActivityFrameworkTest/: MetaTest.cpp  MetaTest.h  TA_ActivityProxyTest.cpp  TA_ActivityProxyTest.h  TA_ActivityQueueTest.cpp  TA_ActivityQueueTest.h  TA_ActivityTest.cpp  TA_ActivityTest.h  TA_CommonToolsTest.cpp  TA_CommonToolsTest.h  TA_ConnectionTest.cpp  TA_ConnectionTest.h  TA_CoroutineTest.cpp  TA_CoroutineTest.h  TA_EndianSwapTest.cpp  TA_EndianSwapTest.h  TA_MetaObjectTest.cpp  TA_MetaObjectTest.h  TA_MetaReflexTest.cpp  TA_MetaReflexTest.h  TA_PipelineTest.cpp  TA_PipelineTest.h  TA_SerializationTest.cpp  TA_SerializationTest.h  TA_ThreadPoolTest.cpp  TA_ThreadPoolTest.h  TA_VariantTest.cpp  TA_VariantTest.h  main.cpp
Test/PipelineTest/: MetaTest.cpp  MetaTest.h  TA_ActivityQueueTest.cpp  TA_ActivityTest.cpp  TA_AutoChainPipelineTest.cpp  TA_AutoChainPipelineTest.h  TA_BasePipelineTest.cpp  TA_BasePipelineTest.h  TA_CommonToolsTest.cpp  TA_ConnectionTest.cpp  TA_ConnectionTest.h  TA_ManualChainPipelineTest.cpp  TA_ManualChainPipelineTest.h  TA_ManualKeyActivityChainPipelineTest.cpp  TA_ManualKeyActivityChainPipelineTest.h  TA_ManualStepsChainPipelineTest.cpp  TA_ManualStepsChainPipelineTest.h  TA_MetaReflexTest.h  TA_ParallelPipelineTest.cpp  TA_ParallelPipelineTest.h  TA_PipelineTest.cpp  TA_ThreadPoolTest.cpp  TA_ThreadPoolTest.h  main.cpp
